<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content"
    android:layout_width="match_parent">

    <RelativeLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".ComicActivity">

        <TextView
            android:id="@+id/title_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:textSize="32sp"
            android:layout_marginBottom="32dp"
            tools:text="Random"
            />

        <ImageView
            android:id="@+id/xkcd_imageview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/title_textview"
            android:layout_marginBottom="32dp"
            />

        <ImageView
            android:id="@+id/upvote_button"
            android:layout_below="@id/xkcd_imageview"
            android:src="@drawable/upvote"
            style="@style/vote_button"/>

        <ImageView
            android:id="@+id/downvote_button"
            android:layout_below="@id/upvote_button"
            android:src="@drawable/downvote"
            style="@style/vote_button" />

    </RelativeLayout>
</ScrollView>
